<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txvbusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvbusqueda" />

    <EditText
        android:id="@+id/txtBusqueda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txvrango_precios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvrango_precios" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtPrecioMenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="0.00" />



        <TextView
            android:id="@+id/txvdisyuntivo"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/txvdisyuntivo" />

        <EditText
            android:id="@+id/txtPrecioMayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="0.00" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.52"
        android:fastScrollEnabled="true"
        android:numColumns="auto_fit" >

    </GridView>

</LinearLayout>